--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1220,7 +1220,7 @@ Which automatically registers any Blocks or Filters contained in the Assembly wh
 A step up from `noop` is the **bold** Template Block which markup its contents within the `<b/>` tag:
 
 ```hbs
-{{#bold}}This text will be bold{{/bold}}
+{% raw %}{{#bold}}This text will be bold{{/bold}}{% endraw %}
 ```
 
 Which calls the `base.WriteBodyAsync()` method to evaluate and write the Block's contents to the `OutputStream` using the current 
