--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1250,7 +1250,7 @@ feature some built-in Blocks take advantage of.
 The `with` block works similarly to [handlebars with helper](https://handlebarsjs.com/block_helpers.html#with-helper) or JavaScript's 
 [with statement](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/with) where it extracts the properties (or Keys)
 of an object and adds them to the current scope which avoids needing a prefix each property reference, 
-e.g. being able to use `{{Name}}` instead of `{{person.Name}}`:
+e.g. being able to use `{% raw %}{{Name}}{% endraw %}` instead of `{% raw %}{{person.Name}}{% endraw %}`:
 
 ```hbs
 {% raw %}{{#with person}}
