all placeholders need escaping

--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1353,8 +1353,8 @@ it's also able to evaluate custom else statements for rendering different result
 
 ### if
 
-Since all blocks can call `base.WriteElseAsync()` to execute any number of `{{else}}` statements, the implementation for 
-the `{{if}}` block ends up being even simpler which just needs to evaluate the argument to `bool`. 
+Since all blocks can call `base.WriteElseAsync()` to execute any number of `{% raw %}{{else}}{% endraw %}` statements, the implementation for 
+the `{% raw %}{{if}}{% endraw %}` block ends up being even simpler which just needs to evaluate the argument to `bool`. 
 
 If **true** it writes the body with `WriteBodyAsync()` otherwise it evaluates any `else` statements with `WriteElseAsync()`:
 
@@ -1472,14 +1472,16 @@ of its LINQ querying modifiers, e.g:
 
 ##### Custom bindings
 
-When using a custom binding like `{{#each c in customers}}` above, the element is only accessible with the custom `c` binding which is more efficient 
-when only needing to reference a subset of the element's properties as it avoids adding each of the elements properties in the items execution scope.
+When using a custom binding like `{% raw %}{{#each c in customers}}{% endraw %}` above, the element is only accessible with the custom `c` binding 
+which is more efficient when only needing to reference a subset of the element's properties as it avoids adding each of the elements properties 
+in the items execution scope.
 
-For more live previews showcasing advanced usages of `{{#each}}`, checkout the [LINQ Examples](http://templates.servicestack.net/linq/restriction-operators).
+For more live previews showcasing advanced usages of `{% raw %}{{#each}}{% endraw %}`, 
+checkout the [LINQ Examples](http://templates.servicestack.net/linq/restriction-operators).
 
 ### raw
 
-The `{{#raw}}` block is similar to [handlebars.js's raw-helper](https://handlebarsjs.com/block_helpers.html#raw-blocks) which captures
+The `{% raw %}{{#raw}}{% endraw %}` block is similar to [handlebars.js's raw-helper](https://handlebarsjs.com/block_helpers.html#raw-blocks) which captures
 the template's raw text content instead of having its content evaluated, making it ideal for emitting content that could contain
 template expressions like client-side JavaScript or template expressions that shouldn't be evaluated on the server such as
 Vue, Angular or Ember templates:
@@ -1492,9 +1494,9 @@ Vue, Angular or Ember templates:
 {{/raw}}{% endraw %}
 ```
 
-When called with no arguments it will render its unprocessed raw text contents. When called with a single argument, e.g. `{{#raw varname}}` it will
-instead save the raw text contents to the specified global (`PageResult`) variable and lastly when called with the `appendTo` modifier it will append 
-its contents to the existing variable, or initialize it if it doesn't exist.
+When called with no arguments it will render its unprocessed raw text contents. When called with a single argument, e.g. 
+`{% raw %}{{#raw varname}}{% endraw %}` will instead save the raw text contents to the specified global (`PageResult`) variable and lastly when 
+called with the `appendTo` modifier it will append its contents to the existing variable, or initialize it if it doesn't exist.
 
 This is now the preferred approach used in all [.NET Core and .NET Framework Web Templates](http://docs.servicestack.net/templates-websites) for 
 pages and partials to append any custom JavaScript script blocks they need to include in the page, e.g:
@@ -1538,7 +1540,7 @@ public class TemplateRawBlock : TemplateBlock {% endraw %}
 
 ### capture
 
-The `{{#capture}}` block in 
+The `{% raw %}{{#capture}}{% endraw %}` block in 
 [TemplateCaptureBlock.cs](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack.Common/Templates/Blocks/TemplateCaptureBlock.cs)
 is similar to the raw block except instead of using its raw text contents, it evaluates its contents and captures the output. 
 It also supports evaluating the contents with scoped arguments where by each property in the object dictionary is added in the scoped arguments 
@@ -1571,7 +1573,8 @@ With this we can dynamically generate some markdown, capture its contents and co
 
 ### markdown
 
-The `{{#markdown}}` block in [MarkdownTemplatePlugin.cs](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack/MarkdownTemplatePlugin.cs)
+The `{% raw %}{{#markdown}}{% endraw %}` block in 
+[MarkdownTemplatePlugin.cs](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack/MarkdownTemplatePlugin.cs)
 makes it even easier to embed markdown content directly in web pages which works as you'd expect where content in a `markdown` block is converted into HTML:
 
 ```hbs
@@ -1631,7 +1634,7 @@ public class TemplateMarkdownBlock : TemplateBlock
 
 ### partial
 
-The `{{#partial}}` block in 
+The `{% raw %}{{#partial}}{% endraw %}` block in 
 [TemplatePartialBlock.cs](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack.Common/Templates/Blocks/TemplatePartialBlock.cs) 
 lets you create In Memory partials which is useful when working with partial filters like `selectPartial` as
 it lets you declare multiple partials within the same page, instead of needing to define them in individual files, e.g:
@@ -1866,9 +1869,8 @@ The output of the `_init` page is captured in the `initout` argument which can b
 </div>{% endraw %}
 ```
 
-If there was an Exception with any of the SQL Statements it will be displayed in the `{{ htmlError }}` filter which can be later viewed 
-in the [/log](http://blog.web-app.io/log) page above.
-
+If there was an Exception with any of the SQL Statements it will be displayed in the `{% raw %}{{ htmlError }}{% endraw %}` filter which can be 
+later viewed in the [/log](http://blog.web-app.io/log) page above.
 
 ## Buffered View Pages
 
