--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -652,7 +652,7 @@ As .NET Core 2.1 is the first LTS release of .NET Core 2 and soon to be the only
 Previously all [ServiceStack's Webpack SPA Templates](/templates-single-page-apps) used a similar Webpack v3 configuration and npm-based solution for enabling its client development workflow and packaging. Unfortunately Webpack 4 was a major breaking change which is incompatible with the existing configuration with not all Webpack modules available for v4 yet. This means all projects created using existing Webpack v3 Templates 
 would need to either manually upgrade to use Webpack 4 or stay on Webpack v3 indefinitely. 
 
-In the meantime all major JavaScript frameworks have developed their own "CLI tools" to simplify development by taking over the configuration and 
+In the meantime all major JavaScript frameworks have developed their own **CLI tools** to simplify development by taking over the configuration and 
 development workflow of projects using their frameworks. One of the ways they simplify development is by hiding Webpack configuration as an internal
 implementation detail whilst ensuring new projects start with same well-known compatible configuration defaults that has been battle tested across a 
 larger user base. By insulating Webpack we're also expecting upgrades to be a lot smoother as in theory only the JS Framework packages and tools would 
@@ -1773,19 +1773,53 @@ page-based routing which enables **pretty urls** inferred from the pages file an
 
 To recap each page can be requested with or without its **.html** extension:
 
-| path | page |
------- | ---- |
-[/db](http://blog.web-app.io/db) |  |
-[/db.html](http://blog.web-app.io/db.html) | [/db.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/db.html) |
-[/posts/new](http://blog.web-app.io/posts/new) | |
-[/posts/new.html](http://blog.web-app.io/posts/new.html) | [/posts/new.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/new.html)
+<table class="table">
+  <thead>
+    <tr>
+      <th>path</th>
+      <th>page</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="http://blog.web-app.io/db">/db</a></td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td><a href="http://blog.web-app.io/db.html">/db.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/db.html">/db.html</a></td>
+    </tr>
+    <tr>
+      <td><a href="http://blog.web-app.io/posts/new">/posts/new</a></td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td><a href="http://blog.web-app.io/posts/new.html">/posts/new.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/new.html">/posts/new.html</a></td>
+    </tr>
+  </tbody>
+</table>
 
 The default route `/` maps to the `index.html` in the directory if it exists, e.g:
 
-| path | page |
------- | ---- |
-[/](http://blog.web-app.io/) | [/index.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/index.html) |
-[/index.html](http://blog.web-app.io/index.html) | [/index.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/index.html) |
+<table class="table">
+  <thead>
+    <tr>
+      <th>path</th>
+      <th>page</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="http://blog.web-app.io/">/</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/index.html">/index.html</a></td>
+    </tr>
+    <tr>
+      <td><a href="http://blog.web-app.io/index.html">/index.html</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/index.html">/index.html</a></td>
+    </tr>
+  </tbody>
+</table>
 
 ### Dynamic Page Routes
 
@@ -1793,11 +1827,32 @@ In addition to these static conventions, Template Pages now supports Nuxt-like [
 where any **file** or **directory** names prefixed with an **_underscore** enables a wildcard path which assigns the matching path component 
 to the arguments name:
 
-| path | page | arguments |
------- | ---- | --------- |
-[/ServiceStack](http://blog.web-app.io/) | [/_user/index.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/_user/index.html) | user=ServiceStack |
-[/posts/markdown-example](http://blog.web-app.io/posts/markdown-example) | [/posts/_slug/index.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/_slug/index.html) | slug=markdown-example |
-[/posts/markdown-example/edit](http://blog.web-app.io/posts/markdown-example/edit) | [/posts/_slug/edit.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/_slug/edit.html) | slug=markdown-example |
+<table class="table">
+  <thead>
+    <tr>
+      <th>path</th>
+      <th>page</th>
+      <th>arguments</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="http://blog.web-app.io/">/ServiceStack</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/_user/index.html">/_user/index.html</a></td>
+      <td>user=ServiceStack</td>
+    </tr>
+    <tr>
+      <td><a href="http://blog.web-app.io/posts/markdown-example">/posts/markdown-example</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/_slug/index.html">/posts/_slug/index.html</a></td>
+      <td>slug=markdown-example</td>
+    </tr>
+    <tr>
+      <td><a href="http://blog.web-app.io/posts/markdown-example/edit">/posts/markdown-example/edit</a></td>
+      <td><a href="https://github.com/NetCoreWebApps/Blog/blob/master/app/posts/_slug/edit.html">/posts/_slug/edit.html</a></td>
+      <td>slug=markdown-example</td>
+    </tr>
+  </tbody>
+</table>
 
 ### Layout and partial recommended naming conventions
 
