--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -2017,7 +2017,15 @@ The [/preview.html](https://github.com/NetCoreWebApps/Blog/blob/master/app/previ
 The preview API above is what provides the new [Blog Web App's](http://blog.web-app.io/) Live Preview feature where it will render any 
 ServiceStack Templates provided in the **content** Query String or HTTP Post Form Data, e.g:
 
- - [{% raw %}/preview?content={{10|times|select:{pow(index,2)},}}{% endraw %}]({% raw %}http://blog.web-app.io/preview?content={{10|times|select:{pow(index,2)},}}{% endraw %})
+{% raw %}
+<ul>
+    <li>
+        <a href="http://blog.web-app.io/preview?content={{10|times|select:{pow(index,2)},}}">
+            /preview?content={{10|times|select:{pow(index,2)},}}
+        </a>
+    </li>
+</ul>
+{% endraw %}
 
 Which renders the plain text response:
 
