--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -2320,7 +2320,7 @@ args.blogHref /
 
 ### New Parcel Web App Template
 
-We're especially excited about this new template which combines the simplicity of developing modern JavaScript Apps with the [parcel template](https://github.com/NetCoreTemplates/parcel) with the simplicity of developing .NET Core Apps with [ServiceStack Templates Web Apps](http://templates.servicestack.net/docs/web-apps) to provide a unified solution for creating rich Apps in a live rapid development workflow without compilation allowing the creation of [pure Cloud Apps](http://templates.servicestack.net/docs/web-apps#pure-cloud-apps) and [simplified deployments](http://templates.servicestack.net/docs/deploying-web-apps).
+We're especially excited about this new template which combines the simplicity of developing modern JavaScript Apps with the [parcel template](https://github.com/NetCoreTemplates/parcel) with the simplicity of developing .NET Core Apps with [ServiceStack Templates Web Apps](http://templates.servicestack.net/docs/web-apps) to provide a unified solution for creating rich Apps in a live rapid development workflow without compilation allowing the creation of [pure Cloud Apps](http://templates.servicestack.net/docs/web-apps#pure-cloud-apps) and [simplified rsync deployments](http://templates.servicestack.net/docs/deploying-web-apps).
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/parcel-webapp.png)](http://parcel-webapp.web-templates.io/)
 
@@ -2436,7 +2436,7 @@ document.querySelector("#Name")!.addEventListener("input", async e => {
 });
 ```
 
-But while your App is running you can toggle the uncommented the line and hit `Ctrl+S` to save `index.ts` which Parcel will automatically transpile and publish to `/app/wwwroot` where it will be detected and automatically reloaded by Hot Reload with the latest changes. Now typing in the text field will display the response from calling the `/hello/_name.html` API Page instead.
+While your App is running you can toggle the uncommented the line and hit `Ctrl+S` to save `index.ts` which Parcel will automatically transpile and publish to `/app/wwwroot` where it will be detected and automatically reloaded with the latest changes. Now typing in the text field will display the response from calling the `/hello/_name.html` API Page instead.
 
 #### Deployments
 
@@ -2622,7 +2622,7 @@ Which will display the available actions which are currently only:
 ### Zero downtime deployments
 
 These actions are useful after an xcopy/rsync deployment to enable zero downtime deployments by getting a running instance to invalidate all 
-internal caches and force existing pages to check if it has been modified, the next time it's called. 
+internal caches and force existing pages to check if it has been modified, the next time their called. 
 
 Actions can be invoked in the format with:
 
@@ -2630,11 +2630,10 @@ Actions can be invoked in the format with:
 
 Which can be used to call 1 or more actions:
 
- - /templates/admin/invalidateAllCaches
- - /templates/admin/invalidateAllCaches,RunInitPage
+    /templates/admin/invalidateAllCaches
+    /templates/admin/invalidateAllCaches,RunInitPage
 
-By default it's only available to be called by **Admin** Users (or using an [AuthSecret](/debugging#authsecret)) but can
-be changed with:
+By default it's only available to be called by **Admin** Users (or [AuthSecret](/debugging#authsecret)) but can be changed with:
 
 ```csharp
 Plugins.Add(new TemplatePagesFeature {
@@ -2694,7 +2693,7 @@ A greedy validation when needing to accept raw HTML but want to validate against
 [Blog content validation](https://github.com/NetCoreWebApps/Blog/blob/c656186cbae7c5f3c18ff4d4abfcd201858b0761/app/posts/_slug/edit.html#L26):
 
 ```hbs
-{{ 'Potentially malicious characters detected' | onlyIf(containsXss(content)) | assignTo: contentError }}
+{% raw %}{{ 'Potentially malicious characters detected' | onlyIf(containsXss(content)) | assignTo: contentError }}{% endraw %}
 ```
 
 Explicit filters for HTML Encoding/Decoding manually:
@@ -2709,7 +2708,7 @@ Explicit filters for HTML Encoding/Decoding manually:
 An alternative way for including the [Hot Reload script](http://templates.servicestack.net/docs/hot-reloading) in **debug** mode:
 
 ```html
-<i hidden>{{ '/js/hot-fileloader.js' | ifDebugIncludeScript }}</i>
+{% raw %}<i hidden>{{ '/js/hot-fileloader.js' | ifDebugIncludeScript }}</i>{% endraw %}
 ```
 
 Useful when needing to view Template HTML pages from a HTTP Server like Webpack's Hot Module Reload Server as it will hide any unevaluated
