--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1673,7 +1673,7 @@ Ultimately they reduce boilerplate, e.g. you can generate a menu list with a sin
 {{/ul}}{% endraw %}
 ```
 
-A more advanced example showcasing many of its different features is contained in the example below:
+A more advanced example showcasing many of its different features is below:
 
 ```hbs
 {% raw %}{{#ul {if:hasAccess, each:items, where:'Age > 27', 
@@ -2094,7 +2094,7 @@ httpResult({
 }) 
 ```
 
-Any other unknown arguments like 'X-Powered-By' are returned as HTTP Response Headers. 
+Any other unknown arguments like **'X-Powered-By'** are returned as HTTP Response Headers. 
 
 Returning the `httpResult` above behaves similarly to customizing a HTTP response using return arguments:
 
@@ -2305,8 +2305,7 @@ args.tags ['technology','marketing']
 Where they can be referenced as an `object` or an `array` directly:
 
 ```html
-{% raw %}
-<a href="{{blog.href}}">{{blog.name}}</a>
+{% raw %}<a href="{{blog.href}}">{{blog.name}}</a>
 
 {{#each tags}} <em>{{it}}</em> {{/each}}{% endraw %}
 ```
