Add instructions for .NET Framework

--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -675,9 +675,13 @@ Bootstrapped with [Vue CLI 3](https://cli.vuejs.org/).
 
  > Live Demo: [vue-spa.web-templates.io](http://vue-spa.web-templates.io)
 
-Create new Vue 2.5 Project:
+Create new Vue 2.5 Project for .NET Core 2.1:
 
     $ dotnet-new vue-spa ProjectName
+
+Create new Vue 2.5 Project for .NET Framework:
+
+    $ dotnet-new vue-spa-netfx ProjectName
 
 ### [react-spa](https://github.com/NetCoreTemplates/react-spa)
 
@@ -687,9 +691,13 @@ Bootstrapped with [create-react-app](https://github.com/facebook/create-react-ap
 
 > Live Demo: [react-spa.web-templates.io](http://react-spa.web-templates.io)
 
-Create new React 16 Project:
+Create new React 16 Project for .NET Core 2.1:
 
     $ dotnet-new react-spa ProjectName
+
+Create new React 16 Project for .NET Framework:
+
+    $ dotnet-new react-spa-netfx ProjectName
 
 ### [angular-spa](https://github.com/NetCoreTemplates/angular-spa)
 
@@ -699,9 +707,13 @@ Bootstrapped with [Angular CLI](https://cli.angular.io).
 
 > Live Demo: [angular-spa.web-templates.io](http://angular-spa.web-templates.io)
 
-Create new Angular 6.1 Project:
+Create new Angular 6.1 Project for .NET Core 2.1:
 
     $ dotnet-new angular-spa ProjectName
+
+Create new Angular 6.1 Project for .NET Framework:
+
+    $ dotnet-new angular-spa-netfx ProjectName
 
 ### [aurelia-spa](https://github.com/NetCoreTemplates/aurelia-spa)
 
@@ -711,9 +723,13 @@ Bootstrapped with [Aurelia CLI](https://aurelia.io/docs/build-systems/aurelia-cl
 
 > Live Demo: [aurelia-spa.web-templates.io](http://aurelia-spa.web-templates.io)
 
-Create new Aurelia Project:
+Create new Aurelia Project for .NET Core 2.1:
 
     $ dotnet-new aurelia-spa ProjectName
+
+Create new Aurelia Project for .NET Framework:
+
+    $ dotnet-new aurelia-spa-netfx ProjectName
 
 ### [vuetify-spa](https://github.com/NetCoreTemplates/vuetify-spa)
 
@@ -723,9 +739,13 @@ Bootstrapped with [Vue CLI 3](https://cli.vuejs.org/) and the [vuetify cli plugi
 
  > Live Demo: [vuetify-spa.web-templates.io](http://vuetify-spa.web-templates.io)
 
-Create new Vuetify Project:
+Create new Vuetify Project for .NET Core 2.1:
 
     $ dotnet-new vuetify-spa ProjectName
+
+Create new Vuetify Project for .NET Framework:
+
+    $ dotnet-new vuetify-spa-netfx ProjectName
 
 ### [vue-nuxt](https://github.com/NetCoreTemplates/vue-nuxt)
 
@@ -735,9 +755,13 @@ Bootstrapped with [Nuxt.js starter template](https://nuxtjs.org/guide/installati
 
  > Live Demo: [vue-nuxt.web-templates.io](http://vue-nuxt.web-templates.io)
 
-Create new Nuxt.js v1.4.2 Project:
+Create new Nuxt.js v1.4.2 Project for .NET Core 2.1:
 
     $ dotnet-new vue-nuxt ProjectName
+
+Create new Nuxt.js v1.4.2 Project for .NET Framework:
+
+    $ dotnet-new vue-nuxt-netfx ProjectName
 
 ### [vuetify-nuxt](https://github.com/NetCoreTemplates/vuetify-nuxt)
 
@@ -747,9 +771,13 @@ Bootstrapped with [Nuxt.js + Vuetify.js starter template](https://github.com/vue
 
  > Live Demo: [vuetify-nuxt.web-templates.io](http://vuetify-nuxt.web-templates.io)
 
-Create new Nuxt Vuetify Project:
+Create new Nuxt Vuetify Project for .NET Core 2.1:
 
     $ dotnet-new vuetify-nuxt ProjectName
+
+Create new Nuxt Vuetify Project for .NET Framework:
+
+    $ dotnet-new vuetify-nuxt-netfx ProjectName
 
 ### SPA Project Templates Dev Workflow
 
