--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -600,7 +600,7 @@ ServiceStack.Text which contains bindings to the native APIs which will continue
 
 Although our Micro benchmarks are still showing many of the new `Span<T>` overloads in the base class library like `int.Parse(ReadOnlySpan<char>)` are 
 [still not as performant](https://github.com/ServiceStack/ServiceStack.Text/blob/master/tests/ServiceStack.Text.Benchmarks/MemoryProviderBenchmarks.cs)
-as our own non-allocating implementations which are continued to be used until more performant APIs are available.
+as our own non-allocating implementations which continued to be used until more performant APIs are available.
 
 But other APIs like like writing to **Streams** or **UTF-8** conversions are now using .NET Core's native implementations.
 
@@ -610,7 +610,7 @@ Bing's [RecyclableMemoryStream](http://www.philosophicalgeek.com/2015/02/06/anno
 that was previously only enabled in .NET Core is now enabled by default in .NET Framework.
 
 This is utilized everywhere a `MemoryStream` is needed in ServiceStack except for a few identified places where they're found to be incompatible like 
-.NET's Compression APIs. 
+in .NET's Compression APIs. 
 
 We haven't been notified of any, but if this change results in any issues, `MemoryStream` pooling can be disabled with:
 
@@ -618,7 +618,7 @@ We haven't been notified of any, but if this change results in any issues, `Memo
 SetConfig(new HostConfig { EnableOptimizations = false })
 ```
 
-If this does resolves any issues, [please let us know](https://github.com/ServiceStack/Issues/issues/new) so they can be resolved permanently without 
+If this does resolve any issues, [please let us know](https://github.com/ServiceStack/Issues/issues/new) so we can resolve them permanently without 
 disabling any other optimizations.
 
 ### Support for UWP .NET Native
@@ -628,7 +628,7 @@ As we've started publishing .NET Core builds of ServiceStack.Text, we've decided
 **.NET Standard 2.0** builds so they remain as portable as possible in **.NET Standard 2.0** supported platforms like UWP/iOS/Android which now 
 fallback to use Compiled Expressions. 
 
-To squeeze out a little more performance Reflection.Emit is still enabled in .NET Core and .NET Framework builds.
+To retain maximum performance Reflection.Emit is still enabled in .NET Core and .NET Framework builds.
 
 #### Xamarin.iOS requires VS.NET 15.8
 
@@ -643,7 +643,7 @@ VS.NET 15.8 project templates.
 In following [Microsoft's LTS policy for .NET Core](https://blogs.msdn.microsoft.com/dotnet/2018/06/20/net-core-2-0-will-reach-end-of-life-on-september-1-2018/)
 we're also moving to support .NET Core 2.1 for running ServiceStack. Most packages publish **.NET Standard 2.0** builds so they remain unaffected except for **ServiceStack.Kestrel** which has been upgraded to reference .NET Core 2.1 packages.
 
-In addition all our Test projects, [.NET Core Templates](https://github.com/NetCoreTemplates), [.NET Core Web Apps](http://templates.servicestack.net/docs/web-apps#example-web-apps), etc have all been upgraded to use .NET Core 2.1.
+In addition all our Test projects, [.NET Core Templates](https://github.com/NetCoreTemplates), [.NET Core Web Apps](http://templates.servicestack.net/docs/web-apps#example-web-apps), etc have all been upgraded to .NET Core 2.1.
 
 As .NET Core 2.1 is the first LTS release of .NET Core 2 and soon to be the only supported version, we're also recommending everyone to upgrade when possible.
 
