Fixed invalid link to 5.1.0 release notes

--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -3226,6 +3226,6 @@ LogManager.LogFactory = new SerilogFactory(new LoggerConfiguration()
  - `JsConfig.ThrowOnDeserializationError` was renamed to `JsConfig.ThrowOnError`
 
 
-# [v5.1.0 Release Notes](/releases/releases/v5.1.0)
+# [v5.1.0 Release Notes](/releases/v5.1.0)
 
 
