--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -685,7 +685,7 @@ The Debug Template is a Service in `TemplatePagesFeature` that's pre-registered 
 
 ```csharp
 Plugins.Add(new TemplatePagesFeature { 
-    EnableDebugTemplate = true
+    MetadataDebugAdminRole = RoleNames.Admin,        // Only allow Admin users
 })
 ```
 
@@ -702,7 +702,8 @@ Alternatively if preferred you can make the Debug Template Service available to 
 
 ```csharp
 Plugins.Add(new TemplatePagesFeature { 
-    EnableDebugTemplateToAll = true
+    MetadataDebugAdminRole = RoleNames.AllowAnyUser,  // Allow Authenticated Users
+    MetadataDebugAdminRole = RoleNames.AllowAnon,     // Allow anyone
 })
 ```
 
