--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -2867,10 +2867,10 @@ E.g. you can create a table that defines columns using the Max Text and Unicode 
 ```csharp
 class Table
 {
-    [CustomField(OrmLiteVariables.MaxText))]        //= {MAX_TEXT}
+    [CustomField(OrmLiteVariables.MaxText)]        //= {MAX_TEXT}
     public string MaxText { get; set; }
 
-    [CustomField(OrmLiteVariables.MaxTextUnicode))] //= {NMAX_TEXT}
+    [CustomField(OrmLiteVariables.MaxTextUnicode)] //= {NMAX_TEXT}
     public string MaxUnicodeText { get; set; }
 }
 ```
