--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1082,7 +1082,7 @@ Which can then be invoked with positional arguments by calling `Invoke()`, e.g:
 
 ```csharp
 expr.Invoke(2,4)        //= 20
-expr.Invoke(2,4, scope) //= 3
+expr.Invoke(scope, 2,4) //= 3
 ```
 
 #### Parsing JS Expressions
