--- a/docs/_releases/v5.1.0.md
+++ b/docs/_releases/v5.1.0.md
@@ -2379,4 +2379,4 @@ As a [reminder from last release](/releases/v5.0.0#enhancement-releases) we're d
 We hope you enjoy this release, feel free to ask any questions or leave any feedback in [techstacks.io/servicestack](https://techstacks.io/servicestack), the [Customer Forums](https://forums.servicestack.net) or StackOverflow
 
 
-# [v5.0.2 Release Notes](/releases/releases/v5.0.0)
+# [v5.0.2 Release Notes](/releases/v5.0.0)
