--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -1087,7 +1087,7 @@ expr.Invoke(scope, 2,4) //= 3
 
 #### Parsing JS Expressions
 
-Evaluating JS expressions with `JS.eval()` is a wrapper around parsing the JS expression into an AST tree then evaluating it, e.g:
+Evaluating JS expressions with `JS.eval()` is a wrapper around parsing the JS expression into an AST tree then evaluating it:
 
 ```csharp
 var expr = JS.expression("pow(2,2) + pow(4,2)");
@@ -1272,7 +1272,7 @@ public class TemplateBoldBlock : TemplateBlock
 ### with
 
 The `with` Block shows an example of utilizing arguments. To maximize flexibility arguments passed into your block are captured in a free-form
-string (specifically a `ReadOnlyMemory<char>`) which gives Blocks the freedom to accept simple arguments to complex LINQ-like expressions - a
+string (specifically a `ReadOnlyMemory<char>`) which gives Blocks the freedom to accept simple arguments to complex LINQ-like expressions - a 
 feature some built-in Blocks take advantage of. 
 
 The `with` block works similarly to [handlebars with helper](https://handlebarsjs.com/block_helpers.html#with-helper) or JavaScript's 
@@ -1286,7 +1286,7 @@ e.g. being able to use `{% raw %}{{Name}}{% endraw %}` instead of `{% raw %}{{pe
 {{/with}}{% endraw %}
 ```
 
-The `with` Block's contents are also only evaluated if the argument expression is `null`. 
+The `with` Block's contents are also **only evaluated** if the argument expression is not `null`. 
 
 The implementation below shows the optimal way to implement `with` by calling `GetJsExpressionAndEvaluate()` to resolve a cached 
 AST token that's then evaluated to return the result of the Argument expression. 
