--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -571,7 +571,7 @@ In future we'll also be looking to make these templates available in .NET Core's
 
 ### .NET Core 2.0 TypeScript Webpack Templates
  
-There's a project template for each of the most popular Single Page Application JavaScript frameworks, including a new [Angular 5.1](https://angular.io) template built and managed using Angular's new [angular-cli](https://cli.angular.io) tooling. All other SPA Templates (inc. Angular 4) utilize a modernized Webpack build system, pre-configured with npm scripts to perform all necessary debug, production and live watched builds and testing. The included [gulpfile.js](https://github.com/NetCoreTemplates/vue-spa/blob/master/MyApp/gulpfile.js) provides a Gulp script around each npm script so they can be run without the command-line, by running them using VS.NET's built-in Task Runner Explorer GUI. 
+There's a project template for each of the most popular Single Page Application JavaScript frameworks, including a new [Angular 5.1](https://angular.io) template built and managed using Angular's new [angular-spa](https://cli.angular.io) tooling. All other SPA Templates (inc. Angular 4) utilize a modernized Webpack build system, pre-configured with npm scripts to perform all necessary debug, production and live watched builds and testing. The included [gulpfile.js](https://github.com/NetCoreTemplates/vue-spa/blob/master/MyApp/gulpfile.js) provides a Gulp script around each npm script so they can be run without the command-line, by running them using VS.NET's built-in Task Runner Explorer GUI. 
 
 ### TypeScript
 
@@ -601,12 +601,12 @@ All Single Page App Templates are available for both .NET Core 2.0 and ASP.NET F
     <th>Single Page App Templates</th>
 </tr>
 <tr>
-    <td><a href="https://github.com/NetCoreTemplates/angular-cli">angular-cli</a></td>
-    <td><a href="https://github.com/NetFrameworkTemplates/angular-cli-netfx">angular-cli-netfx</a></td>
+    <td><a href="https://github.com/NetCoreTemplates/angular-spa">angular-spa</a></td>
+    <td><a href="https://github.com/NetFrameworkTemplates/angular-spa-netfx">angular-spa-netfx</a></td>
     <td align="center">
         <h3>Angular 5 CLI Bootstrap Template</h3>
-        <a href="http://angular-cli.web-templates.io"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/angular-cli.png" width="500" /></a>
-        <p><a href="http://angular-cli.web-templates.io">angular-cli.web-templates.io</a></p>
+        <a href="http://angular-spa.web-templates.io"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/angular-spa.png" width="500" /></a>
+        <p><a href="http://angular-spa.web-templates.io">angular-spa.web-templates.io</a></p>
     </td>
 </tr>
 <tr>
