Replace WebAppStarter with Bare Web App

--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -138,7 +138,7 @@ Web Apps leverages Templates to develop entire content-rich, data-driven website
 
 Not having to write any C# code or perform any app builds dramatically reduces the cognitive overhead and conceptual knowledge required for development where the only thing front-end Web developers need to know is [Template's syntax](http://templates.servicestack.net/docs/syntax) and what [filters are available](http://templates.servicestack.net/docs/filters-reference) to call. Because of Template's high-fidelity with JavaScript, developing a Website with Templates will be instantly familiar to JavaScript developers despite calling and binding directly to .NET APIs behind the scenes.
 
-All complexity with C#, .NET, namespaces, references, .dlls, strong naming, packages, MVC, Razor, build tools, IDE environments, etc has been eliminated leaving all Web Developers needing to do is run a cross-platform [web/app.dll](https://github.com/NetCoreWebApps/Web) .NET Core 2.0 executable and configure a simple [web.settings](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/web.settings) text file to specify which website folder to use, which ServiceStack features to enable, which db or redis providers to connect to, etc. Not needing to build also greatly simplifies deployments where multiple websites can be deployed with a [single rsync](https://github.com/NetCoreWebApps/WebApp/blob/master/src/WebApp/run.deploy.apps.sh) or xcopy command or if deploying your App in a Docker Container, you just need to [copy your website files](https://github.com/NetCoreWebApps/Rockwind.Aws/blob/master/Dockerfile), or just the `web.settings` if you're using an S3 or Azure Virtual File System.
+All complexity with C#, .NET, namespaces, references, .dlls, strong naming, packages, MVC, Razor, build tools, IDE environments, etc has been eliminated leaving all Web Developers needing to do is run a cross-platform [web/app.dll](https://github.com/NetCoreWebApps/Web) .NET Core 2.0 executable and configure a simple [web.settings](https://github.com/NetCoreTemplates/bare-webapp/blob/master/app.settings) text file to specify which website folder to use, which ServiceStack features to enable, which db or redis providers to connect to, etc. Not needing to build also greatly simplifies deployments where multiple websites can be deployed with a [single rsync](https://github.com/NetCoreWebApps/WebApp/blob/master/src/WebApp/run.deploy.apps.sh) or xcopy command or if deploying your App in a Docker Container, you just need to [copy your website files](https://github.com/NetCoreWebApps/Rockwind.Aws/blob/master/Dockerfile), or just the `web.settings` if you're using an S3 or Azure Virtual File System.
 
 ### Rapid Development Workflow
 
@@ -152,16 +152,16 @@ Web Apps also enable the development of [Pure Cloud Apps](http://templates.servi
 
 We've developed a number of Web Apps to illustrate the various features available and to showcase its strengths and the different kind of Web Apps that can easily be developed with it. The source code for each app is maintained in [NetCoreWebApps](https://github.com/NetCoreWebApps) and each Web App runs the same [pre-compiled web/app.dll binary](https://github.com/NetCoreWebApps/Web).
 
-### Web App Starter
+### Bare Web App
 
-> source [/WebAppStarter](https://github.com/NetCoreWebApps/WebAppStarter) - demo [bare.web-app.io](http://bare.web-app.io)
+> source [/Bare Web App](https://github.com/NetCoreWebApps/bare) - demo [bare.web-app.io](http://bare.web-app.io)
 
 The Web App Starter project is representative of a typical Company splash Website:
 
 [![](http://templates.servicestack.net/assets/img/screenshots/bare.png)](http://bare.web-app.io)
 
 The benefits over using a static website is improved maintenance as you can extract and use its common 
-[_layout.html](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/_layout.html) instead of having it duplicated in each page. The [menu.html](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/menu.html) partial also makes menu items
+[_layout.html](https://github.com/NetCoreWebApps/bare/blob/master/_layout.html) instead of having it duplicated in each page. The [menu.html](https://github.com/NetCoreWebApps/bare/blob/master/menu.html) partial also makes menu items
 easier to maintain by just adding an entry in the JavaScript object literal. The dynamic menu also takes care of highlighting the active menu item.
 
 ```html
@@ -191,16 +191,13 @@ title: About Us
 Template's syntax is also the ideal way to convey variable substitution, e.g: `{% raw %}<title>{{ title }}</title>{% endraw %}`
 and even embedding a partial reads like english `{% raw %}{{ 'menu' | partial }}{% endraw %}` which is both intuitive and works well with GUI HTML designers.
 
-#### [web.settings](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/web.settings)
+#### [web.settings](https://github.com/NetCoreTemplates/bare-webapp/blob/master/app.settings)
 
-Below is the `web.settings` for a Basic App, with `contentRoot` being the [only setting required](https://github.com/NetCoreWebApps/WebAppStarter/blob/master/app/web.min.settings) as the rest can be inferred but including the other relevant settings improves readability for other developers and makes it easier to [use tools like sed](https://github.com/NetCoreWebApps/WebApp/blob/master/src/WebApp/run.deploy.apps.sh) or [powershell to replace them](https://github.com/NetCoreWebApps/WebApp/blob/master/src/WebApp/run.bare.ps1) during deployment.
+Below is the `app.settings` for a Basic App:
 
 ```
 debug true
-name Bare Web App
-port 5000
-contentRoot ~/../app
-webRoot ~/../app
+name Bare WebApp
 ```
 
 > `debug true` controls the level of internal diagnostics available and whether or not [Hot Reloading](http://templates.servicestack.net/docs/hot-reloading) is enabled. 
